--- a/client/index.html
+++ b/client/index.html
@@ -17,8 +17,8 @@
                     <h1 class="title">Welcome to the Index Page</h1>
                     <p class="subtitle">Choose a page to explore:</p>
                     <div class="buttons is-centered">
-                        <a class="button is-link is-light" href="/ollama">Ollama Visual UI</a>
-                        <a class="button is-link is-light" href="/github-model">GitHub Model API</a>
+                        <a class="button is-link is-light" href="https://anmol-josan.github.io/Ollama-Visual/client/ollama">Ollama Visual UI</a>
+                        <a class="button is-link is-light" href="https://anmol-josan.github.io/Ollama-Visual/client/github-model">GitHub Model API</a>
                     </div>
                 </div>
             </div>
